--- a/速记.md
+++ b/速记.md
@@ -1,3 +1,25 @@
+1. 标准化接口: **接口中消息模式、格式、协议**
+1. **逆向工程**可以将软件某种形式的描述转换为更高级的抽象表示
+1. **再工程**能够对现有系统进行修改或重构
+1. **计划阶段**确认**移植方案**
+1. **有效性验证**:**软件功能、性能、其他特性与用户需求一致**
+1. 确认测试: **内部测试、alpha、beta、验收测试**
+1. 基于**体系结构的软件设计方法中(ABSD)**, 采用**视角与视图**来描述软件架构、采用(**用例**)描述功能需求,采用**质量场景**描述质量需求
+1. 体系结构文档化过程的主要输出:**体系结构规格说明、测试体系结构需求的质量设计说明书**
+1. CPU 访问内存同步
+1. CPU 与 I/O 接口交换通常是同步
+1. CPU与PCI总线交换信息同步
+1. I/O接口与答应及异步 
+1. 网络逻辑结构设计: 逻辑网络设计图、IP选址方案、安全方案
+1. 署名权、修改权、 保护作品完整权不受时间限制
+1. 发表权、使用权和获得报酬权受时间限制
+1. 动态测试: **边界值分析、逻辑覆盖、基本路径**
+1. 静态测试: **桌面检查、代码审查、代码走查**
+1. 操作性需求: 系统完成任务所需的操作环境要救及如何满足系统将来可能的需求变更的要求
+1. 性能需求: 针对系统新能要求的指标,常见 响应时间、吞吐率
+1. 安全性需求: 防止系统崩溃和保证数据安全所需要采取的保护措施或预防措施
+1. 文化需求: 使用本系统的不同用户群对系统提出的特有要求
+
 1. 霍尔三维结构:**逻辑、时间、知识**
 1. 4个最优:**规划、设计、管理、控制**
 1. 结构、元素、信息
@@ -12,7 +34,7 @@
 1. 伺服对象: 完成客户端请求
 1. 领域涉及的目标是获得**特定领域软件架构**
 1. 领域实现为了**开发和组织可重用信息，对基础软件架构进行实现**
-1. ATAM四个活动**场景和需求收集、体系结构视图、场景实现、属性模型构造和分析、这种**
+1. ATAM四个活动**场景和需求收集、体系结构视图、场景实现、属性模型构造和分析、折中**
 1. SAAM活动:**场景开发、体系结构描述、单个场景评估、场景交互和总体评估**
 1. SAAM 输入问题 **问题描述、需求声明和体系结构描述**
 1. 仓库风格有两种不同的构件:**中央数据结构说明当前状态,独立构件在中央数据库存储上执行**
