--- a/速记.md
+++ b/速记.md
@@ -53,6 +53,23 @@
 1. 按照软件过程将软件分:**软件开发工具、软件维护工具、软件管理工具、软件支持工具**
 1. sccs ： 版本控制工具
 1. 结构化程序: **顺序、分支、循环**
+| 指令系统类型 | **指令**                                                     | **寻址方式**   | 实现方式       | 其他                       |
+| ------------ | ------------------------------------------------------------ | -------------- | -------------- | -------------------------- |
+| CISC 复杂    | **数量多，使用频率差别大，可变长格式**                       | **支持多**     | 微程序控制技术 | 研制周期长                 |
+| RISC 精简    | **数量少， 使用频率接近，定长格式 ， 操作寄存器 只有 LOAD/STORE 操作内存** | **支持方式少** | 通用寄存器     | 优化编译，有效支持高级语言 |
+
+
+1. 存储速度: CPU \ CACHE \ 主存 \ 外存
+1. 随机存储器(内存 DRAM )
+    1. 动态ram
+    1. 静态ram
+1. 只读存储器
+    1. MROM 掩模式ROM
+    1. PROM 一次可编程ROM
+    1. EPROM 可擦除的PROM
+    1. 闪存 flash memory 
+1. PV , P： S-1 <0 阻塞 , V: S+1 <=0 阻塞. 生产1, 消费0 两边换着用. P 锁 V 开 
+1. 现代信息系统的构件三要素:**构件、模式、规划**
 1. 软件架构是关于软件系统的**结构、行为和属性**的高级抽象
 1. 操作系统特性:**并发性、共享性、虚拟性、不确定性** 
 1. 操作系统的功能:**进程管理、文件管理、存储管理、设备管理、作业管理**
@@ -156,7 +173,6 @@
 1. 测试阶段
     进行工作单元、程序单元的测试otepad
 1. 验证阶段
-
 1. RUP 架构视图:**逻辑视图、实现视图、进程视图、部署视图、用例视图**
 1. VRAPS原则:**构想原则、节奏原则、预见原则、写作原则、简化原则**
 1. MVC : **模型 控制器 视图**
