--- a/速记.md
+++ b/速记.md
@@ -1,3 +1,25 @@
+1. 集成测试分为**一次性组装和增量式组装**
+1. 集成测试计划一般在**概要设计阶段**完成
+1. 数据库**完整性约束检查**保证事务一致性
+1. **二阶段锁西医:能够保证事务的可串行化执行,可能发生死锁**
+1. CRM:**人力资源、业务流程、专业技术**
+1. CRM:**销售自动化、营销自动化、客户服务与支持、商业智能**
+1. 项目配置管理中,配置项的状态:**草稿、正式发布、正在修改**
+1. 结构化布线系统分为六个子系统,其中水平系统**连接了干线子系统和工作区子系统**
+1. DSSA基本活动: **领域分析、领域设计、领域实现**
+1. **领域分析的主要目的是获得领域模型**
+1. **领域设计获得特定领域软件架构**
+1. **准确程度从大到小:真实测试、核心程序、小型基准程序、合成基准程序**
+1. 数据库设计的需求分析阶段形成**需求说明文档、数据字典、数据流图**, 这些文档还可以作为**概念结构设计**阶段的依据
+1. RUP 4+1 视图模型中,用户注重**逻辑视图**,系统工程师注重**部署视图**
+1. UML 需求分析利用**用例及用例图**表示需求,利用**包图及类图**表示目标软件系统的总体架构
+1. 数据库容灾:**系统安全与应用安全**
+1. 遗留系统演化策略
+    1. 高水平低价值:集成
+    1. 高水平高价值:改造
+    1. 低水平低价值:淘汰
+    1. 低水平高价值: 继承
+
 1. 标准化接口: **接口中消息模式、格式、协议**
 1. **逆向工程**可以将软件某种形式的描述转换为更高级的抽象表示
 1. **再工程**能够对现有系统进行修改或重构
@@ -19,7 +41,6 @@
 1. 性能需求: 针对系统新能要求的指标,常见 响应时间、吞吐率
 1. 安全性需求: 防止系统崩溃和保证数据安全所需要采取的保护措施或预防措施
 1. 文化需求: 使用本系统的不同用户群对系统提出的特有要求
-
 1. 霍尔三维结构:**逻辑、时间、知识**
 1. 4个最优:**规划、设计、管理、控制**
 1. 结构、元素、信息
